# bevy_mod_fbx

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
assets/: cube.fbx
dev_docs/: custom_material_design.md  fbx_tree_printer.rs
examples/: cube.rs  scene_viewer.rs
scripts/: test_wasm.html  test_wasm.sh
src/: data.rs  fbx_transform.rs  lib.rs  loader.rs  material_loader.rs  mesh.rs  save.rs  tangents.rs  texture.rs
src/data/: geometry.rs  material.rs  mesh.rs  mod.rs  scene.rs  texture.rs
src/loader/: load.rs  mod.rs
src/triangulator/: mod.rs  triangulate.rs
src/utils/: bbox.rs  bounding_box.rs  fbx_extend.rs  mod.rs  triangulate.rs
src/utils/iter/: mod.rs  options.rs  results.rs
tools/: uuidgen.rb
tools/check_fbx/: Cargo.toml
tools/check_fbx/src/: main.rs
