[package]
name = "bevy_mod_fbx"
version = "0.1.0-dev"
edition = "2021"
repository = "https://github.com/HeavyRain266/bevy_mod_fbx"
exclude = ["assets/**/*", "scripts/**/*", ".github/**/*"]
description = "Autodesk Filmbox (*.fbx) loader for Bevy Engine"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "bevy_plugin", "fbx_loader"]

[features]
profile = []
maya_3dsmax_pbr = []

[dependencies]
rgb = "0.8.33"
anyhow = "1.0.58"
glam = { version = "0.21", features = ["mint"] }
mint = "0.5"
# fbxcel-dom = { version = "0.0.9", path = "../fbxcel-dom" }
fbxcel-dom = "0.0.9"

[dependencies.bevy]
version = "0.8.1"
default-features = false
features = [
  "tga",
  "bevy_pbr",
  "bevy_render",
  "bevy_winit",
  "bevy_scene",
]

[dev-dependencies]
bevy-inspector-egui = "0.12"

[dev-dependencies.bevy]
version = "0.8.1"
default-features = false
features = [
  "x11", #"wayland",

  "tga", "dds",
  "bevy_pbr",
  "bevy_render",
  "bevy_winit",
  "bevy_scene",
  "filesystem_watcher",
  "bevy_core_pipeline"
]
